--- a/css/style.css
+++ b/css/style.css
@@ -7,3 +7,16 @@ ul {
   margin-top: 60px;
   margin-left: 30px;
 }
+
+/* Task-6 */
+#validation-input {
+  border: 3px solid #bdbdbd;
+}
+
+#validation-input.valid {
+  border-color: #4caf50;
+}
+
+#validation-input.invalid {
+  border-color: #f44336;
+}
